--- a/openidl-data-call-processor/server/config/target-channel-config.json
+++ b/openidl-data-call-processor/server/config/target-channel-config.json
@@ -1,7 +1,7 @@
 {
     "targetChannels": [
         {
-            "channelName": "analytics-aais",
+            "channelName": "anlytcs-aais",
             "chaincodeName": "openidl-cc-aais-carriers"
         },
         {
