--- a/openidl-deployment-scripts/ansible/common-vars.yml
+++ b/openidl-deployment-scripts/ansible/common-vars.yml
@@ -16,7 +16,7 @@ channel_name: "defaultchannel"
 smart_contract_name: "fabcar"
 smart_contract_version: "1.0.0"
 smart_contract_package: "fabcar@1.0.0.cds"
-channel_name_nc: "analytics-aais"
+channel_name_nc: "anlytcs-aais"
 # smart_contract_constructor: "initLedger"
 # smart_contract_endorsement_policy: ""
 # smart_contract_collections_file: ""
