--- a/openidl-local-reference-implementation/config/config-local-carrier/listener-channel-config.json
+++ b/openidl-local-reference-implementation/config/config-local-carrier/listener-channel-config.json
@@ -1,7 +1,7 @@
 {
     "listenerChannels": [
         {
-            "channelName": "analytics-carrier",
+            "channelName": "anlytcs-carr1",
             "events": [
                 {
                     "ConsentedEvent": "ConsentedEvent"
