--- a/openidl-local-reference-implementation/config/config-local-carrier/channel-config.json
+++ b/openidl-local-reference-implementation/config/config-local-carrier/channel-config.json
@@ -5,7 +5,7 @@
             "chaincodeName": "openidl-cc-default"
         },
         {
-            "channelName": "analytics-carrier",
+            "channelName": "anlytcs-carr1",
             "chaincodeName": "openidl-cc-aais-carriers"
         }
     ],
@@ -18,7 +18,7 @@
     ],
     "crossChannelQueryParam": [
         {
-            "channelName": "analytics-carrier",
+            "channelName": "anlytcs-carr1",
             "chaincodeName": "openidl-cc-aais-carriers"
         }
     ]
