--- a/openidl-local-reference-implementation/config/config-local-carrier/insurance-data-manager-channel-config.json
+++ b/openidl-local-reference-implementation/config/config-local-carrier/insurance-data-manager-channel-config.json
@@ -1,7 +1,7 @@
 {
     "channels": [
         {
-            "channelName": "analytics-carrier",
+            "channelName": "anlytcs-carr1",
             "chaincodeName": "openidl-cc-aais-carriers"
         }
     ],
