Update openidl-common-lib reference

--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           cd openidl-common-lib/
           echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > .npmrc
-          echo "@openidl-org:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "@senofi:registry=https://npm.pkg.github.com" >> .npmrc
           echo "always-auth=true" >> .npmrc
           cat .npmrc
       - name: Setup Node
