--- a/openidl-mapper/package.json
+++ b/openidl-mapper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@openidl-org/openidl-mapper",
+  "name": "@senofi/openidl-mapper",
   "version": "0.0.1",
   "main": "index.js",
   "repository": {
