--- a/openidl-data-call-app/.npmrc
+++ b/openidl-data-call-app/.npmrc
@@ -1,2 +1,2 @@
-@openidl-org:registry=https://npm.pkg.github.com
+@senofi:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
