Fix openidl-mapper build

--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -21,11 +21,8 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://npm.pkg.github.com/'
       - name: Publish package on NPM
-        run: |
-          cd openidl-common-lib/
-          # VERSION=$(npm version patch)
-          # echo "VERSION=$VERSION" >> $GITHUB_ENV
-          npm publish --registry=https://npm.pkg.github.com/
+        run: npm publish --access public
+        working-directory: openidl-common-lib
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # push the version changes to GitHub
