--- a/.github/workflows/publish-mapper.yaml
+++ b/.github/workflows/publish-mapper.yaml
@@ -20,4 +20,4 @@ jobs:
         run: npm publish --access public
         working-directory: openidl-mapper
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.CONTAINER_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
