--- a/.github/workflows/publish-mapper.yaml
+++ b/.github/workflows/publish-mapper.yaml
@@ -1,8 +1,9 @@
 name: Publish Mapper
+
 on:
-  push:
-    paths:
-    - 'openidl-mapper/**'
+  workflow_call:
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,7 +12,7 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
       - name: install
         run: npm install
