--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -1,12 +1,7 @@
-name: Publish openIDL common-lib to Github NPM
+name: Publish openIDL common-lib
+
 on:
-  push:
-    branches:
-      - openidl-nd-poc-main       
-      - develop
-    paths:
-      - 'openidl-common-lib/**'
-  
+  workflow_call:
   workflow_dispatch:
 
 jobs:
@@ -18,7 +13,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com/'
       - name: Publish package on NPM
         run: npm publish --access public
