Fix for the build
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/.github/workflows/publish-mapper.yml
+++ b/.github/workflows/publish-mapper.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm install
         working-directory: openidl-mapper
       - name: publish
-        run: npm publish --access public
         working-directory: openidl-mapper
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
