--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -26,6 +26,7 @@
 		"@angular/platform-browser": "~12.1.2",
 		"@angular/platform-browser-dynamic": "~12.1.2",
 		"@angular/router": "~12.1.2",
+    "@angular/material-moment-adapter": "~12.1.2",
 		"@senofi/openidl-common-lib": "^0.7.0",
 		"config": "^3.3.6",
 		"cookie-parser": "^1.4.5",
