--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -23,10 +23,10 @@
 		"@angular/core": "~12.1.2",
 		"@angular/forms": "~12.1.2",
 		"@angular/material": "~12.1.2",
+		"@angular/material-moment-adapter": "~12.1.2",
 		"@angular/platform-browser": "~12.1.2",
 		"@angular/platform-browser-dynamic": "~12.1.2",
 		"@angular/router": "~12.1.2",
-    "@angular/material-moment-adapter": "~12.1.2",
 		"@senofi/openidl-common-lib": "^0.7.0",
 		"config": "^3.3.6",
 		"cookie-parser": "^1.4.5",
@@ -45,6 +45,7 @@
 		"request-promise": "^4.2.6",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.2.0",
+		"url-regex": "^5.0.0",
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
