--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@openidl-org/openidl-common-lib",
-  "version": "0.5.29",
+  "name": "@senofi/openidl-common-lib",
+  "version": "0.7.8",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/openidl-org/openidl-main.git",
+    "url": "https://github.com/senofi/openidl-main.git",
     "directory": "openidl-common-lib"
   },
   "engines": {
@@ -34,6 +34,8 @@
     "node-vault": "^0.9.22",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
+    "pg": "^8.8.0",
+    "pg-cursor": "^2.7.4",
     "request-promise": "^4.2.2",
     "safe-eval": "^0.4.1"
   },
@@ -45,10 +47,10 @@
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "husky": "^4.3.8",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.12",
-    "nyc": "15.0.0",
-    "husky": "^4.3.8"
+    "nyc": "15.0.0"
   },
   "resolutions": {
     "fabric-client/**/jsrsasign": "10.2.0",
