--- a/openidl-data-call-processor/package.json
+++ b/openidl-data-call-processor/package.json
@@ -33,13 +33,13 @@
         "npm": "6.14.x"
     },
     "devDependencies": {
+        "@shelf/jest-mongodb": "^2.2.0",
         "chai": "^4.1.2",
         "cross-env": "^5.2.0",
+        "jest": "^27.4.7",
         "mocha": "^8.4.0",
         "nodemon": "^2.0.12",
         "nyc": "^15.0.0-beta.0",
-        "sinon": "7.2.7",
-        "@shelf/jest-mongodb": "^2.2.0",
-        "jest": "^27.4.7"
+        "sinon": "7.2.7"
     }
 }
