--- a/openidl-data-call-processor/package.json
+++ b/openidl-data-call-processor/package.json
@@ -16,6 +16,7 @@
         "@cloudant/cloudant": "^3.0.1",
         "@senofi/openidl-common-lib": "^0.7.0",
         "@sendgrid/mail": "^7.2.1",
+        "array-chunk-by-size": "^2.1.1",
         "aws-sdk": "2.474.0",
         "config": "^2.0.1",
         "cron": "^1.8.2",
