--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -1,7 +1,13 @@
-name: Publish openIDL common-lib
-
+name: Publish openIDL common-lib to Github NPM
 on:
-  workflow_call:
+  push:
+    branches:
+      - openidl-nd-poc-main       
+      - develop
+      - remove-huge-data-logs
+    paths:
+      - 'openidl-common-lib/**'
+  
   workflow_dispatch:
 
 jobs:
@@ -9,19 +15,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+      - name: Create .npmrc
+        run: |
+          cd openidl-common-lib/
+          echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > .npmrc
+          echo "@openidl-org:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "always-auth=true" >> .npmrc
+          cat .npmrc
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '14.x'
           registry-url: 'https://npm.pkg.github.com/'
       - name: Publish package on NPM
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          registry: https://npm.pkg.github.com
-          token: '${{ secrets.GITHUB_TOKEN }}'
-          access: public
-          package: openidl-common-lib/package.json
+        run: |
+          cd openidl-common-lib/
+          # VERSION=$(npm version patch)
+          # echo "VERSION=$VERSION" >> $GITHUB_ENV
+          npm publish --registry=https://npm.pkg.github.com/
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # push the version changes to GitHub
       # - run: |
       #     git config --global user.name "GitHub CD bot"
