--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@senofi/openidl-common-lib",
-  "version": "0.7.7",
+  "name": "@openidl-org/openidl-common-lib",
+  "version": "0.5.28",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/senofi/openidl-main.git",
+    "url": "https://github.com/openidl-org/openidl-main.git",
     "directory": "openidl-common-lib"
   },
   "engines": {
