--- a/.github/workflows/publish-openidl-transactional-data-event-listener.yml
+++ b/.github/workflows/publish-openidl-transactional-data-event-listener.yml
@@ -24,6 +24,17 @@ jobs:
       - name: Check out the Repository
         uses: actions/checkout@v3
 
+      - name: Run tests
+        run: npm test
+
+      - name: Check test status and prevent merge on failure
+        if: always()
+        run: |
+          if [ ${{ job.status }} == 'failure' ]; then
+          echo "Tests failed, merge not allowed."
+          exit 1
+          fi    
+
       - name: Log into GitHub Docker Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -57,5 +68,3 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ github.run_number }}
-
-
