--- a/openidl-transactional-data-event-listener/package.json
+++ b/openidl-transactional-data-event-listener/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "NODE_CONFIG_DIR=./server/config node server/index.js",
+    "debug": "NODE_CONFIG_DIR=./server/config node --inspect server/index.js",
     "dev": "cross-env NODE_CONFIG_DIR=./server/config nodemon server/index.js",
     "test": "NODE_CONFIG_DIR=./server/config nyc mocha --timeout 600000 --exit",
     "dev-test": "cross-env NODE_CONFIG_DIR=./server/config nyc mocha --timeout 600000 --exit"
@@ -14,13 +15,12 @@
   "dependencies": {
     "@cloudant/cloudant": "^3.0.1",
     "@sendgrid/mail": "^7.2.1",
+    "@senofi/openidl-common-lib": "^0.7.0",
     "aws-sdk": "2.474.0",
     "config": "^2.0.1",
     "express": "~4.16.0",
     "log4js": "^4.3.2",
     "mongodb": "^3.6.10",
-    "node-cron": "^3.0.0",
-    "@senofi/openidl-common-lib": "^0.7.0",
     "node-schedule": "^2.1.0",
     "object-sizeof": "1.4.0"
   },
