--- a/.github/workflows/on-demand-publish.yml
+++ b/.github/workflows/on-demand-publish.yml
@@ -5,28 +5,28 @@ on:
 
 jobs:
   openidl-common-lib:
-    uses: .github/workflows/publish-openidl-common-lib-npm.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-common-lib-npm.yml@{{ github.ref }}
   openidl-mapper:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-mapper.yml
+    uses: senofi/openidl-main/.github/workflows/publish-mapper.yml@{{ github.ref }}
   openidl-utilities:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-utilities.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-utilities.yml@{{ github.ref }}
   openidl-data-call-app:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-data-call-app.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-data-call-app.yml@{{ github.ref }}
   openidl-data-call-mood-listener:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-data-call-mood-listener.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-data-call-mood-listener.yml@{{ github.ref }}
   openidl-data-call-processor:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-data-call-processor.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-data-call-processor.yml@{{ github.ref }}
   openidl-insurance-data-manager:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-insurance-data-manager.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-insurance-data-manager.yml@{{ github.ref }}
   openidl-data-event-listener:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-transactional-data-event-listener.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-transactional-data-event-listener.yml@{{ github.ref }}
   openidl-ui-workspace:
     needs: openidl-common-lib
-    uses: .github/workflows/publish-openidl-ui-workspace.yml
+    uses: senofi/openidl-main/.github/workflows/publish-openidl-ui-workspace.yml@{{ github.ref }}
