--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+
+      - name: Run tests
+        run: npm test
+
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
