--- a/.github/workflows/publish-chaincode-docker-image.yml
+++ b/.github/workflows/publish-chaincode-docker-image.yml
@@ -36,9 +36,24 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.REPOSITORY_OWNER }}/openidl-chaincode
 
       - name: Build and push Docker image
+        id: build_docker_image
         uses: docker/build-push-action@v4
         with:
           context: ./openidl-chaincode
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push the metadata package for default channel
+        uses: ./.github/workflows/publish-chaincode-metadata-package.yml
+        with:
+          chaincode_metadata_label: openidl-cc-default
+          chaincode_docker_image: ${{ steps.build_docker_image.outputs.imageid }}
+          chaincode_docker_image_digest: ${{ steps.build_docker_image.outputs.digest }}
+
+      - name: Build and push the metadata package for analytics channel
+        uses: ./.github/workflows/publish-chaincode-metadata-package.yml
+        with:
+          chaincode_metadata_label: openidl-cc-analytics-carrier
+          chaincode_docker_image: ${{ steps.build_docker_image.outputs.imageid }}
+          chaincode_docker_image_digest: ${{ steps.build_docker_image.outputs.digest }}
