--- a/.github/workflows/publish-chaincode-docker-image.yml
+++ b/.github/workflows/publish-chaincode-docker-image.yml
@@ -44,16 +44,16 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push the metadata package for default channel
-        uses: ./.github/workflows/publish-chaincode-metadata-package.yml
-        with:
-          chaincode_metadata_label: openidl-cc-default
-          chaincode_docker_image: ${{ steps.build_docker_image.outputs.imageid }}
-          chaincode_docker_image_digest: ${{ steps.build_docker_image.outputs.digest }}
+  build-and-push-metadata-package-for-default-channel:
+    uses: ./.github/workflows/publish-chaincode-metadata-package.yml
+    with:
+      chaincode_metadata_label: openidl-cc-default
+      chaincode_docker_image: ${{ steps.build_docker_image.outputs.imageid }}
+      chaincode_docker_image_digest: ${{ steps.build_docker_image.outputs.digest }}
 
-      - name: Build and push the metadata package for analytics channel
-        uses: ./.github/workflows/publish-chaincode-metadata-package.yml
-        with:
-          chaincode_metadata_label: openidl-cc-analytics-carrier
-          chaincode_docker_image: ${{ steps.build_docker_image.outputs.imageid }}
-          chaincode_docker_image_digest: ${{ steps.build_docker_image.outputs.digest }}
+  build-and-push-metadata-package-for-analytics-channel:
+    uses: ./.github/workflows/publish-chaincode-metadata-package.yml
+    with:
+      chaincode_metadata_label: openidl-cc-analytics-carrier
+      chaincode_docker_image: ${{ steps.build_docker_image.outputs.imageid }}
+      chaincode_docker_image_digest: ${{ steps.build_docker_image.outputs.digest }}
