--- a/.github/workflows/publish-chaincode-metadata-package.yml
+++ b/.github/workflows/publish-chaincode-metadata-package.yml
@@ -2,6 +2,16 @@ name: Publish chaincode metadata package
 
 on:
   workflow_call:
+    inputs:
+      chaincode_metadata_label:
+        description: 'Chaincode metadata label'
+        required: true
+      chaincode_docker_image:
+        description: 'Docker image'
+        required: true
+      chaincode_docker_image_digest:
+        description: 'Docker image SHA256 digest'
+        required: true
   workflow_dispatch:
     inputs:
       chaincode_metadata_label:
