--- a/.github/workflows/publish-chaincode-metadata-package.yml
+++ b/.github/workflows/publish-chaincode-metadata-package.yml
@@ -46,7 +46,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        NEW_VERSION=$GITHUB_RUN_NUMBER
+        NEW_VERSION=1.0.$GITHUB_RUN_NUMBER
         echo "Github username: ${GITHUB_ACTOR}"
         echo "Version: ${NEW_VERSION}"
         ./gradlew publish \
