--- a/.github/workflows/publish-chaincode-docker-image.yml
+++ b/.github/workflows/publish-chaincode-docker-image.yml
@@ -18,6 +18,10 @@ jobs:
       contents: read
       packages: write
 
+    outputs:
+      image: ${{ env.REGISTRY }}/${{ github.REPOSITORY_OWNER }}/openidl-chaincode
+      digest: ${{ steps.build_docker_image.outputs.digest }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -36,9 +40,26 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.REPOSITORY_OWNER }}/openidl-chaincode
 
       - name: Build and push Docker image
+        id: build_docker_image
         uses: docker/build-push-action@v4
         with:
           context: ./openidl-chaincode
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  build-and-push-metadata-package-for-default-channel:
+    needs: build-and-push-chaincode-image
+    uses: ./.github/workflows/publish-chaincode-metadata-package.yml
+    with:
+      chaincode_metadata_label: openidl-cc-default
+      chaincode_docker_image: ${{ needs.build-and-push-chaincode-image.outputs.image }}
+      chaincode_docker_image_digest: ${{ needs.build-and-push-chaincode-image.outputs.digest }}
+
+  build-and-push-metadata-package-for-analytics-channel:
+    needs: build-and-push-chaincode-image
+    uses: ./.github/workflows/publish-chaincode-metadata-package.yml
+    with:
+      chaincode_metadata_label: openidl-cc-analytics-carrier
+      chaincode_docker_image: ${{ needs.build-and-push-chaincode-image.outputs.image }}
+      chaincode_docker_image_digest: ${{ needs.build-and-push-chaincode-image.outputs.digest }}
