--- a/.github/workflows/publish-openidl-transactional-data-event-listener.yml
+++ b/.github/workflows/publish-openidl-transactional-data-event-listener.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Check out the Repository
         uses: actions/checkout@v3
 
+      - name: Run tests
+        run: npm test
+
       - name: Log into GitHub Docker Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
