Fix the name of the code archive
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-chaincode/chaincode/openidl-metadata/build.gradle
+++ b/openidl-chaincode/chaincode/openidl-metadata/build.gradle
@@ -17,7 +17,7 @@ task generateSources(type: Copy) {
 task buildCodeTar(type: Tar) {
     extension = 'tgz'
     destinationDir = file('build/archive')
-    archiveFileName = 'code.tgz'
+    archiveFileName = 'code.tar.gz'
     compression = Compression.GZIP
 
     into ('.'){
