IDL-58: add path on pull_request

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,8 @@ name: CI
 
 on:
   pull_request:
-    branches:
-      - senofi-develop
-
+    paths:
+      - "openidl-transactional-data-event-listener/**"
 jobs:
   test:
     runs-on: ubuntu-latest
