Add a step to install dependencies

--- a/.github/workflows/publish-openidl-transactional-data-event-listener.yml
+++ b/.github/workflows/publish-openidl-transactional-data-event-listener.yml
@@ -24,6 +24,14 @@ jobs:
       - name: Check out the Repository
         uses: actions/checkout@v3
 
+      - name: Prepare .npmrc
+        id: npmrc
+        run: |
+          sed -i 's|${GITHUB_TOKEN}|${{ secrets.GITHUB_TOKEN }}|' ./.npmrc
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Run tests
         run: npm test
 
@@ -40,11 +48,6 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Prepare .npmrc
-        id: npmrc
-        run: |
-          sed -i 's|${GITHUB_TOKEN}|${{ secrets.GITHUB_TOKEN }}|' ./.npmrc
 
       - name: Get Branch Name
         run: echo "BRANCH=${GITHUB_REF#refs/heads/}" >> ${GITHUB_ENV}
