--- a/openidl-cloud-services/package.json
+++ b/openidl-cloud-services/package.json
@@ -6,6 +6,23 @@
   "scripts": {
     "test": "test"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Senofi",
+  "license": "ISC",
+  "dependencies": {
+    "@azure/identity": "^3.2.4",
+    "@azure/keyvault-secrets": "^4.7.0",
+    "@azure/storage-blob": "^12.15.0",
+    "@ibm-functions/iam-token-manager": "^1.0.3",
+    "@kubernetes/client-node": "^0.18.1",
+    "aws-sdk": "2.474.0",
+    "config": "^2.0.1",
+    "fabric-network": "^2.2.3",
+    "log4js": "^4.3.2",
+    "node-vault": "^0.9.22",
+    "uuid": "^3.3.2"
+  },
+  "engines": {
+    "node": "14.17.x",
+    "npm": "6.14.x"
+  }
 }
