--- a/openidl-cloud-services/package.json
+++ b/openidl-cloud-services/package.json
@@ -18,6 +18,7 @@
     "config": "^2.0.1",
     "fabric-network": "^2.2.3",
     "log4js": "^4.3.2",
+    "mongodb": "^3.6.10",
     "node-vault": "^0.9.22",
     "uuid": "^3.3.2"
   },
