--- a/openidl-transactional-data-event-listener/package.json
+++ b/openidl-transactional-data-event-listener/package.json
@@ -13,16 +13,14 @@
     "dev-test": "cross-env NODE_CONFIG_DIR=./server/config nyc mocha --timeout 600000 --exit"
   },
   "dependencies": {
-    "@cloudant/cloudant": "^3.0.1",
     "@sendgrid/mail": "^7.2.1",
-    "@senofi/openidl-common-lib": "^0.7.0",
-    "aws-sdk": "2.474.0",
     "config": "^2.0.1",
     "express": "~4.16.0",
     "log4js": "^4.3.2",
-    "mongodb": "^3.6.10",
     "node-schedule": "^2.1.0",
-    "object-sizeof": "1.4.0"
+    "object-sizeof": "1.4.0",
+    "openidl-common-lib": "*",
+    "openidl-cloud-services": "*"
   },
   "engines": {
     "node": "14.17.x",
