--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@senofi/openidl-common-lib",
-  "version": "0.7.64",
+  "version": "0.7.65",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -20,25 +20,32 @@
     "dev": "nodemon index.js",
     "lint": "eslint .",
     "lintfix": "eslint --fix .",
-    "test": "nyc mocha --exit"
+    "test": "nyc mocha --timeout 600000 --recursive --exit"
   },
   "dependencies": {
+    "@azure/identity": "^3.2.4",
+    "@azure/keyvault-secrets": "^4.7.0",
+    "@azure/storage-blob": "^12.15.0",
     "@cloudant/cloudant": "4.2.1",
     "@ibm-functions/iam-token-manager": "^1.0.3",
+    "@kubernetes/client-node": "^0.18.1",
     "@sendgrid/mail": "^7.2.1",
+    "aws-sdk": "2.474.0",
+    "config": "^2.0.1",
     "fabric-ca-client": "^2.2.3",
     "fabric-network": "^2.2.3",
     "ibmcloud-appid": "^6.0.0",
+    "lodash": "^4.17.21",
     "log4js": "^4.3.2",
     "mongodb": "^3.6.10",
     "node-vault": "^0.9.22",
-    "openidl-cloud-services": "*",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
     "pg": "^8.8.0",
     "pg-cursor": "^2.7.4",
     "request-promise": "^4.2.2",
-    "safe-eval": "^0.4.1"
+    "safe-eval": "^0.4.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -51,7 +58,8 @@
     "husky": "^4.3.8",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.12",
-    "nyc": "15.0.0"
+    "nyc": "15.0.0",
+    "sinon": "7.2.7"
   },
   "resolutions": {
     "fabric-client/**/jsrsasign": "10.2.0",
