--- a/openidl-transactional-data-event-listener/package.json
+++ b/openidl-transactional-data-event-listener/package.json
@@ -14,13 +14,12 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.1",
+    "@senofi/openidl-common-lib": "^0.7.0",
     "config": "^2.0.1",
     "express": "~4.16.0",
     "log4js": "^4.3.2",
     "node-schedule": "^2.1.0",
-    "object-sizeof": "1.4.0",
-    "openidl-common-lib": "*",
-    "openidl-cloud-services": "*"
+    "object-sizeof": "1.4.0"
   },
   "engines": {
     "node": "14.17.x",
