--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -41,6 +41,7 @@
     "node-vault": "^0.9.22",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
+    "passport-oauth2": "^1.7.0",
     "pg": "^8.8.0",
     "pg-cursor": "^2.7.4",
     "request-promise": "^4.2.2",
