IDL-88 Fix missing documentation and change name of configuration property for wallet storage secret name

--- a/openidl-local-reference-implementation/config/config-local-aais/local-vault-config.json
+++ b/openidl-local-reference-implementation/config/config-local-aais/local-vault-config.json
@@ -3,5 +3,5 @@
     "accessKeyId": "${AWS_ACCESS_KEY}",
     "secretAccessKey": "${AWS_ACCESS_SECRET_KEY}",
     "region": "${AWS_REGION}",
-    "secretName": "aais-hv-credential"
+    "walletStorageSecretName": "aais-hv-credential"
 }
