--- a/openidl-local-reference-implementation/config/config-local-analytics/local-vault-config.json
+++ b/openidl-local-reference-implementation/config/config-local-analytics/local-vault-config.json
@@ -3,5 +3,5 @@
     "accessKeyId": "${AWS_ACCESS_KEY}",
     "secretAccessKey": "${AWS_ACCESS_SECRET_KEY}",
     "region": "${AWS_REGION}",
-    "secretName": "aais-hv-credential"
+    "walletStorageSecretName": "aais-hv-credential"
 }
