--- a/openidl-transactional-data-event-listener/server/config/mappings.json
+++ b/openidl-transactional-data-event-listener/server/config/mappings.json
@@ -6,5 +6,13 @@
     "kvs-credentials": {
         "env": "KVS_CONFIG",
         "file": "local-kvs-config.json"
+    },
+    "s3-bucket-config": {
+        "env": "S3_BUCKET_CONFIG",
+        "file": "s3-bucket-config.json"
+    },
+    "azure-blob-config": {
+        "env": "AZURE_BLOB_CONFIG",
+        "file": "azure-blob-config.json"
     }
 }
