IDL-89 Implement logic to store user attributes in local DB
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -35,12 +35,14 @@
     "fabric-ca-client": "^2.2.3",
     "fabric-network": "^2.2.3",
     "ibmcloud-appid": "^6.0.0",
+    "jwks-rsa": "^3.0.1",
     "lodash": "^4.17.21",
     "log4js": "^4.3.2",
     "mongodb": "^3.6.10",
     "node-vault": "^0.9.22",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
+    "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.7.0",
     "pg": "^8.8.0",
     "pg-cursor": "^2.7.4",
