--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -28,6 +28,7 @@
 		"@angular/platform-browser-dynamic": "~12.1.2",
 		"@angular/router": "~12.1.2",
 		"@senofi/openidl-common-lib": "^1.0.1",
+		"angular-oauth2-oidc": "^13.0.1",
 		"config": "^3.3.6",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
@@ -35,6 +36,7 @@
 		"express-session": "^1.17.2",
 		"helmet": "^3.6.0",
 		"ibmcloud-appid": "^6.1.1",
+		"jwks-rsa": "^3.0.1",
 		"log4js": "^4.3.2",
 		"moment": "^2.29.1",
 		"nconf": "^0.11.2",
@@ -42,6 +44,7 @@
 		"nocache": "^2.1.0",
 		"node-fetch": "^2.6.1",
 		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.1",
 		"request-promise": "^4.2.6",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.2.0",
