IDL-89 Fix auth2 handler getting user attributes
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-ui-workspace/projects/openidl-ui/server/config/mappings.json
+++ b/openidl-ui-workspace/projects/openidl-ui/server/config/mappings.json
@@ -14,5 +14,9 @@
 	"current-jurisdiction": {
 		"value": "North Dakota",
 		"env": "CURRENT_JURISDICTION"
-	}
+	},
+  "off-chain-db-credentials": {
+    "env": "OFF_CHAIN_DB_CONFIG",
+    "file": "local-db-config.json"
+  }
 }
