--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -29,6 +29,7 @@
 		"@angular/router": "~12.1.2",
 		"@senofi/openidl-common-lib": "^1.1.0",
 		"angular-oauth2-oidc": "^13.0.1",
+		"angular-oauth2-oidc-jwks": "^15.0.1",
 		"config": "^3.3.6",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
