--- a/openidl-ui-workspace/projects/openidl-ui/server/config/mappings.json
+++ b/openidl-ui-workspace/projects/openidl-ui/server/config/mappings.json
@@ -1,6 +1,6 @@
 {
 	"idp-credentials": {
-		"file": "local-cognito-config.json",
+		"file": "local-auth-config.json",
 		"env": "IDP_CONFIG"
 	},
 	"port": {
