--- a/openidl-ui-workspace/Dockerfile
+++ b/openidl-ui-workspace/Dockerfile
@@ -6,9 +6,12 @@ RUN apk update && apk upgrade && \
     apk add --no-cache \
     bash \
     git \
-    python \
     make \
     g++
+
+RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
+RUN python3 -m ensurepip
+RUN pip3 install --no-cache --upgrade pip setuptools
 
 WORKDIR /app
 COPY . .
