--- a/openidl-data-call-processor/package.json
+++ b/openidl-data-call-processor/package.json
@@ -13,24 +13,25 @@
         "jest": "jest --config ./jest.config.js"
     },
     "dependencies": {
-        "@cloudant/cloudant": "^3.0.1",
+        "@cloudant/cloudant": "^4.5.1",
         "@senofi/openidl-common-lib": "^1.0.9",
-        "@sendgrid/mail": "^7.2.1",
+        "@sendgrid/mail": "^8.0.0",
         "array-chunk-by-size": "^2.1.1",
-        "aws-sdk": "2.474.0",
+        "aws-sdk": "2.1354.0",
         "config": "^2.0.1",
         "cron": "^1.8.2",
-        "express": "~4.16.0",
-        "log4js": "^4.3.2",
+        "express": "~4.17.3",
+        "log4js": "^6.4.0",
         "moment": "^2.29.1",
         "mongodb": "^3.6.7",
         "object-sizeof": "^1.4.0",
         "sleep": "^6.1.0",
-        "uuid": "^3.3.2"
+        "uuid": "^3.3.2",
+        "nan": "^2.19.0"
     },
     "engines": {
-        "node": "14.17.x",
-        "npm": "6.14.x"
+        "node": "21.7.x",
+        "npm": "10.5.x"
     },
     "devDependencies": {
         "@shelf/jest-mongodb": "^2.2.0",
