up version for log4s and common lib

--- a/openidl-transactional-data-event-listener/package.json
+++ b/openidl-transactional-data-event-listener/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.0.0",
-    "@senofi/openidl-common-lib": "1.0.15",
+    "@senofi/openidl-common-lib": "^1.2.1",
     "config": "^2.0.1",
     "express": "~4.17.3",
-    "log4js": "^6.4.0",
+    "log4js": "^6.9.1",
     "node-schedule": "^2.1.0",
     "object-sizeof": "1.4.0"
   },
